Restructured the repository-structure.adoc and index.adoc files

--- a/docs/antora/modules/ROOT/pages/index.adoc
+++ b/docs/antora/modules/ROOT/pages/index.adoc
@@ -1,9 +1,22 @@
 = TED-RDF Mappings Documentation
 
-The https://github.com/OP-TED/ted-rdf-mapping[TED-RDF Mappings] are mainly the transformation rules needed by the https://github.com/OP-TED/ted-rdf-conversion-pipeline[TED-RDF Conversion Pipeline] (both of which are part of the  TED Semantic Web Services, aka TED-SWS system) to convert TED notices available in XML format to https://www.w3.org/RDF/[RDF]. These transformation rules, which are written in https://rml.io/specs/rml/[RML], map the https://op.europa.eu/en/web/eu-vocabularies/e-procurement/tedschemas[XML structure] of TED https://simap.ted.europa.eu/web/simap/standard-forms-for-public-procurement[standard forms] notices to RDF, and are organised in xref:mapping-suite-structure.adoc[mapping suites].
+The https://github.com/OP-TED/ted-rdf-mapping[TED-RDF Mappings] git repository contains
+mainly the transformation rules needed by
+the https://github.com/OP-TED/ted-rdf-conversion-pipeline[TED-RDF Conversion Pipeline]
+to convert TED notices available in XML format to https://www.w3.org/RDF/[RDF].
+Both TED-RDF Mappings and TED-RDF Conversion Pipeline are part of the TED Semantic
+Web Services, aka TED-SWS system.
+These transformation rules, which are written in https://rml.io/specs/rml/[RML],
+map the https://op.europa.eu/en/web/eu-vocabularies/e-procurement/tedschemas[XML structure]
+of TED https://simap.ted.europa.eu/web/simap/standard-forms-for-public-procurement[standard forms]
+notices to RDF, and are organised in xref:mapping-suite-structure.adoc[mapping suites].
 
-Also, xref:preparing-test-data.adoc[carefully selected sample data] are available for testing the correctness and completeness of the mappings.
+Also, xref:preparing-test-data.adoc[carefully selected sample data]
+are available for testing the correctness and completeness of the mappings.
 
-We foresee to map all standard forms, and then all eForms, according to xref:mapping-priorities.adoc[this plan], prioritising some form number over other ones. In order to be consistent in our approach, we have also established a mapping xref:methodology.adoc[methodology].
+We foresee to map all standard forms, and then all eForms, according
+to xref:mapping-priorities.adoc[this plan], prioritising some form number over other ones.
+In order to be consistent in our approach, we also established a mapping
+xref:methodology.adoc[methodology].
 
 The mappings of the various code lists are described xref:code-list-resources.adoc[here].
