Changed to have up to dateness for mapping-priorities.adoc, preparing-test-data.adoc, nav.adoc, versioning.adoc, and mapping-suite-structure.adoc

--- a/docs/antora/modules/ROOT/pages/preparing-test-data.adoc
+++ b/docs/antora/modules/ROOT/pages/preparing-test-data.adoc
@@ -1,6 +1,6 @@
 = Representative sample data selection
 
-This section describes TED notice data samples and methods used to generate them. At first a sampling is performed on the notices from 2021, and then on a wider set.
+This section describes TED notice data samples, and the method used to generate them. At first a sampling is performed on the notices from 2021, and then on a wider set.
 
 == Sample TED notices from 2021
 
@@ -10,16 +10,16 @@ This data sample (`test_data/sampling_2021`) contains carefully selected TED not
 
 * The data space was partitioned twice based on two criteria: the notice form number (e.g. `F03`, `F06`) and the eForms Subtype (e.g. `cn-standard`, `can-utilities`);
 
-* The minimal set of the most representative notices have been selected for each form_number and eforms_subtype .
+* The minimal set of the most representative notices has been selected for each Standard Form and eForms subtype.
 
 
 === Sampling result statistics
 Below we present two tables with statistics indicating the total number for each selection criteria, the percentage relative to the total number of considered notices (i.e. total in 2021), and the number of selected most representative notices.
 
-==== Sampling based on form_number:
+==== Sampling based on Standard Form:
 
 |===
-|*form_number*|*nr. of notices*|*percentage of total number of notices*|*nr. of the most representative notices*
+|*Standard Form*|*nr. of notices*|*percentage of total number of notices*|*nr. of the most representative notices*
 
 |F03|249618|37,35|20
 |F02|223430|33,43|18
@@ -46,11 +46,11 @@ Below we present two tables with statistics indicating the total number for each
 |*Total*|*668381*|*100%*|*365*
 |===
 
-==== Sampling based on eforms_subtype:
+==== Sampling based on eForms subtype:
 
 
 |===
-|*eforms_subtype*|*nr. of notices*|*percentage of total number of notices*|*nr. of most representative notices*
+|*eForms subtype*|*nr. of notices*|*percentage of total number of notices*|*nr. of most representative notices*
 
 |29|249618|37,35|19
 |16|223430|33,43|19
