--- a/docs/antora/modules/ROOT/partials/methodology/key-elements-for-mapping.adoc
+++ b/docs/antora/modules/ROOT/partials/methodology/key-elements-for-mapping.adoc
@@ -2,12 +2,12 @@
 ==  Key elements involved in the mapping process
 In this section we will provide descriptions and references to the key elements (concepts or resources) that are involved in the creation of mappings or the mapping process itself.
 
-The purpose of the mapping process is to generate a “mapping table” (described in the xref:methodology.adoc#_conceptual-mapping-structure[conceptual mapping artefact] section) that can be processed by an automated workflow of the https://github.com/OP-TED/ted-rdf-conversion-pipeline[TED-SWS system] to “execute” these mappings in order to convert the TED XML input data into an ePO conformant RDF graph (the output of the mapping). This “mapping table” will be encoded as a spreadsheet, with multiple worksheets, whose structure is described elsewhere.
+The purpose of the mapping process is to generate a “mapping table” (described in the xref:methodology.adoc#_conceptual-mapping-structure[conceptual mapping artefact] section) that can be processed by an automated workflow of the https://github.com/OP-TED/ted-rdf-conversion-pipeline[TED-SWS system] to “execute” these mappings in order to convert the TED XML input data into an ePO conformant RDF graph (the output of the mapping).
 
 
 === Notices to be mapped
 
-The input for the transformation process are *XML files* that contain TED notice data. These data are structured according to the https://simap.ted.europa.eu/web/simap/standard-forms-for-public-procurement[“Standard Forms”]  published by the European Commission. There are 23 standard forms defined (numbered 1-8, 12-25, T1 and T2), whose PDF versions can be found here: https://simap.ted.europa.eu/standard-forms-for-public-procurement[https://simap.ted.europa.eu/standard-forms-for-public-procurement].
+The input for the transformation process are *XML files* that contain TED notice data. These data are structured according to the https://simap.ted.europa.eu/web/simap/standard-forms-for-public-procurement[“Standard Forms”]  published by the European Commission. There are 23 standard forms defined (numbered 1-8, 12-25, T1 and T2), whose PDF versions can be found https://simap.ted.europa.eu/standard-forms-for-public-procurement[here].
 
 The XML files need to conform to the official TED XML format defined by https://op.europa.eu/en/web/eu-vocabularies/e-procurement/tedschemas[TED XML Schema] (XSD). Over the years, multiple versions of this TED XML Schema were released, and there is a significant amount of XML data published that conform to these various versions. The latest XML notices are conformant to the https://op.europa.eu/en/web/eu-vocabularies/e-procurement/tedschemas[*versions R2.0.8 (more precisely R2.0.8.S05.E01_002-20201027 - in case of forms 16-19) and R2.0.9 (more precisely R2.0.9.S05 - for all the other forms)]* of the TED XML Schema.
 
@@ -22,7 +22,7 @@ To create these mappings, we rely on a number of different resources that were p
 |TED forms PDFs|PDF files representing the physical forms that are to be completed with the relevant data according to each notice. https://simap.ted.europa.eu/standard-forms-for-public-procurement[link]
 |Deloitte & OP - TED_XML_Mapping|Excel spreadsheets that map elements (fields, sections, etc.) found in the Standard Forms to elements in the eForms. These tables provide the full list of elements and also XPaths to identify the corresponding information TED-XML files.
 https://drive.google.com/drive/folders/120iLgw1owyg5_5S5PAfw95yvz5NMaeCF[link]
-|Ontology_eForms_NEW_Mapping_New Regulation| https://docs.google.com/spreadsheets/d/1KVhJDNP034C6eyYoPTkUvzVEcsseMwcq/edit#gid=188795671[link]
+|Ontology_eForms_NEW_Mapping_New Regulation| The Business Terms found in eForms https://docs.google.com/spreadsheets/d/1KVhJDNP034C6eyYoPTkUvzVEcsseMwcq/edit#gid=188795671[link]
 |Mappings by Everis|Just for reference. Various parts might be out of date. https://drive.google.com/drive/folders/123-ZA3YCdtXBJo3i-YnimMAf7XdBXW72[link]
 |Test data set by Everis|A set of approx. 300 XML files (6 batches of about 50 files each, for the forms F02, F03, F05, F06, F24 and F25) https://drive.google.com/drive/folders/16Qe5x49PbktdQxgY5TU5XnCEd7rxqaCl[link]
 |RDF results by Everis|Just for reference. Various parts might be out of date. https://drive.google.com/drive/folders/1T44VXXQ74_shOtsZta2NbjX4AnYtk14W[link]
@@ -37,9 +37,9 @@ https://drive.google.com/drive/folders/120iLgw1owyg5_5S5PAfw95yvz5NMaeCF[link]
 
 The output of the XML notice transformation will be an *RDF graph* instantiating the https://docs.ted.europa.eu/EPO/dev/index.html[eProcurement Ontology], containing a number of RDF triples where the subjects, predicates and objects of the triples are either:
 
-* *unique IRIs*, generated in a deterministic fashion, that can identify the notice or the different component parts of a notice; these IRIs (or less frequently blank nodes) are used in multiple triples (either as subjects or object) to build an *RDF graph*;
+* *unique IRIs*, generated in a deterministic fashion, that can identify the notice or the different component parts of a notice; these IRIs (or less frequently blank nodes) are used in multiple triples (either as subjects or objects) to build an *RDF graph*;
 * *IRIs* representing *controlled vocabulary terms* or *entities in the ePO ontology*;
-* *Literals* representing numbers, boolean values, or strings. The string values are often encoded as multilingual strings of type +rdf:langString+., to enable the representation of textual values in multiple European languages.
+* *Literals* representing numbers, boolean values, or strings. The string values are often encoded as multilingual strings of type +rdf:langString+, to enable the representation of textual values in multiple European languages.
 
 === Mapping files produced
 
